Bug 1317379 - Disallow generator functions and async functions as direct children of if/else.  r=arai